2006-05-24  Harri Pitkänen  <hatapitk@iki.fi>

	* Do not add hyphenation points if hyphenation is forbidden in Malaga
	* Implement VOIKKO_OPT_NO_UGLY_HYPHENATION
	* New options in voikkohyphenate: no_ugly_hyphenation=0|1

2006-05-24  Harri Pitkänen  <hatapitk@iki.fi>

	* Word splitting suggestions

2006-05-23  Harri Pitkänen  <hatapitk@iki.fi>

	* Vowel changing suggestions

2006-05-22  Harri Pitkänen  <hatapitk@iki.fi>

	* Add manual pages for voikkospell and voikkohyphenate

2006-05-22  Harri Pitkänen  <hatapitk@iki.fi>

	* Character case correcting suggestions
	* New options in voikkospell: -s, accept_first_uppercase=0|1

2006-05-20  Harri Pitkänen  <hatapitk@iki.fi>

	* Add cache size parameter to voikko_init
	* Version 0.3

2006-05-20  Harri Pitkänen  <hatapitk@iki.fi>

	* Case-sensitive checking
	* Iconv handle caching
	* Spellchecker result cache

2006-04-24  Harri Pitkänen  <hatapitk@iki.fi>

	* Implement VOIKKO_OPT_COMPOUND_INTERSECT_LEVEL

2006-04-23  Harri Pitkänen  <hatapitk@iki.fi>

	* Fix use-after-free in voikko_do_spell

2006-04-23  Harri Pitkänen  <hatapitk@iki.fi>

	* Fix pointer usage in porting.c:getline
	* configure fixes

2006-04-20  Harri Pitkänen  <hatapitk@iki.fi>

	* Add AM_MAINTAINER_MODE to configure.ac
	* Some porting work for FreeBSD

2006-04-19  Harri Pitkänen  <hatapitk@iki.fi>

	* Add support for personal Malaga project file in $HOME/.voikko/suomi.pro
	* Add README

2006-04-14  Harri Pitkänen  <hatapitk@iki.fi>

	* Search malaga.h from include/malaga and include

2006-04-13  Harri Pitkänen  <hatapitk@iki.fi>

	* Add more API documentation
	* Fix configure check for gcc visibility support
	* Increase version number to 0.2

2006-04-13  Harri Pitkänen  <hatapitk@iki.fi>

	* voikkospell.c: Additional mode for automated tests
	* Fixes for bugs found by Valgrind

2006-04-11  Harri Pitkänen  <hatapitk@iki.fi>

	* Library API improvements and documentation

2006-04-11  Harri Pitkänen  <hatapitk@iki.fi>

	* Added ChangeLog
