@@ -1,3 +1,7 @@
+2006-05-27  Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Character replacing suggestions
+
 2006-05-24  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Do not add hyphenation points if hyphenation is forbidden in Malaga
